--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
   </header>
 
   <div class="search-bar">
-    <input id="searchInput" type="text" placeholder="Search brand or price (140,150,160)" />
+    <input id="searchInput" type="text" placeholder="Search by brand or price" />
   </div>
 
   <div class="categories" id="categories"></div>
@@ -326,7 +326,7 @@
 
     // Brands data
     const brands = [
-      { id: 'aquaddis', name: 'Aquaddis', img: 'https://i.postimg.cc/dVD0gdmt/aquaddis.webp', brandDisplay: 'Aquaddis',
+      { id: 'aquaddis', name: 'Aquaddis', img: 'https://i.postimg.cc/dVD0gdmt/aquaddis.webp', brandDisplay: 'Aquaddis/Agent',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'}, {label:'Magnesium', val:'1.3 mg/L'}, {label:'Sodium', val:'2.3 mg/L'}, {label:'TDS', val:'20 mg/L'}]
       },
