--- a/index.html
+++ b/index.html
@@ -132,8 +132,6 @@
     .variant-size { font-size: 18px; font-weight: 600; }
     .variant-price { font-size: 20px; color: var(--accent); font-weight: bold; }
 
-    /* ──────────────────────────────────────────────── */
-    /* Changed: Order button instead of + */
     .order-btn {
       background: var(--tg-button-color);
       color: var(--tg-button-text-color);
@@ -152,7 +150,6 @@
       transform: scale(0.96);
       opacity: 0.92;
     }
-    /* ──────────────────────────────────────────────── */
 
     .nutrition {
       margin-top: 28px;
@@ -268,14 +265,14 @@
   </header>
 
   <div class="search-bar">
-    <input id="searchInput" type="text" placeholder="Search by brand or price" />
+    <input id="searchInput" type="text" placeholder="Search brand or max price (140, 150, 160)" />
   </div>
 
   <div class="categories" id="categories"></div>
 
   <div id="no-results">No brands found</div>
 
-  <!-- Cart (bottom sheet style) -->
+  <!-- Cart -->
   <div id="cart-summary">
     <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:16px;">
       <h2 style="margin:0; font-size:20px;">Your Cart</h2>
@@ -304,7 +301,7 @@
     });
     tg.MainButton.hide();
 
-    // Theme synchronization
+    // Theme sync
     function applyTheme() {
       const isDark = tg.colorScheme === 'dark';
       document.body.classList.toggle('dark', isDark);
@@ -326,67 +323,67 @@
 
     // Brands data
     const brands = [
-      { id: 'aquaddis', name: 'Aquaddis', img: 'https://i.postimg.cc/dVD0gdmt/aquaddis.webp', brandDisplay: 'Aquaddis water/Agent',
+      { id: 'aquaddis', name: 'Aquaddis', img: 'https://i.postimg.cc/dVD0gdmt/aquaddis.webp', brandDisplay: 'Aquaddis',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'}, {label:'Magnesium', val:'1.3 mg/L'}, {label:'Sodium', val:'2.3 mg/L'}, {label:'TDS', val:'20 mg/L'}]
       },
-      { id: 'gold', name: 'Gold Water', img: 'https://i.postimg.cc/nr7cPzVK/gold-w.webp', brandDisplay: 'Gold Water/Agent',
+      { id: 'gold', name: 'Gold Water', img: 'https://i.postimg.cc/nr7cPzVK/gold-w.webp', brandDisplay: 'Gold Water - For Golden life',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'TDS', val:'8.5 mg/L'}, {label:'Calcium', val:'1.6 mg/L'}, {label:'Magnesium', val:'0.8 mg/L'}, {label:'Potassium', val:'8.5 mg/L'}, {label:'Sodium', val:'0.9 mg/L'}]
       },
-      { id: 'top', name: 'Top water', img: 'https://i.postimg.cc/4dGs4htb/top.webp', brandDisplay: 'Top Water/ Agent',
+      { id: 'top', name: 'Top water', img: 'https://i.postimg.cc/4dGs4htb/top.webp', brandDisplay: 'Top Water',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
       },
-      { id: 'one', name: 'One water', img: 'https://i.postimg.cc/Vvf49NBk/one-water.jpg', brandDisplay: 'One Water/ Agent',
+      { id: 'one', name: 'One water', img: 'https://i.postimg.cc/Vvf49NBk/one-water.jpg', brandDisplay: 'One Water',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
       },
-      { id: 'africa', name: 'Africa water', img: 'https://i.postimg.cc/0NGB7hR3/africa.jpg', brandDisplay: 'Africa Water/ Agent',
+      { id: 'africa', name: 'Africa water', img: 'https://i.postimg.cc/0NGB7hR3/africa.jpg', brandDisplay: 'Africa Water',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
       },
-      { id: 'yes', name: 'Yes water', img: 'https://i.postimg.cc/rw1JHWnJ/yes.webp', brandDisplay: 'Yes Water/ Agent',
+      { id: 'yes', name: 'Yes water', img: 'https://i.postimg.cc/rw1JHWnJ/yes.webp', brandDisplay: 'Yes Water',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
       },
-      { id: 'dega', name: 'Dega water', img: 'https://i.postimg.cc/9FG86vz9/dega.webp', brandDisplay: 'Dega Water/ Agent',
+      { id: 'dega', name: 'Dega water', img: 'https://i.postimg.cc/9FG86vz9/dega.webp', brandDisplay: 'Dega Water',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
       },
-      { id: 'arki', name: 'Arki water', img: 'https://i.postimg.cc/TwDqrDDf/arki.webp', brandDisplay: 'Arki Water/ Agent',
+      { id: 'arki', name: 'Arki water', img: 'https://i.postimg.cc/TwDqrDDf/arki.webp', brandDisplay: 'Arki Water',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
       },
-      { id: 'forest', name: 'Forest water', img: 'https://i.postimg.cc/bYFW3tJV/forest.webp', brandDisplay: 'Forest Water/ Agent',
+      { id: 'forest', name: 'Forest water', img: 'https://i.postimg.cc/bYFW3tJV/forest.webp', brandDisplay: 'Forest Water',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
       },
-      { id: 'kiya', name: 'kiya water', img: 'https://i.postimg.cc/TYMSzXV0/kiya.webp', brandDisplay: 'Kiya Water/ Agent',
+      { id: 'kiya', name: 'kiya water', img: 'https://i.postimg.cc/TYMSzXV0/kiya.webp', brandDisplay: 'Kiya Water',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
       },
-      { id: 'sport', name: 'Sport water', img: 'https://i.postimg.cc/9McHHHH5/sport.webp', brandDisplay: 'Sport Water/ Agent',
+      { id: 'sport', name: 'Sport water', img: 'https://i.postimg.cc/9McHHHH5/sport.webp', brandDisplay: 'Sport Water',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
       },
-      { id: 'fham', name: 'Fham water', img: 'https://i.postimg.cc/wjqVSMCp/fham.jpg', brandDisplay: 'Fham Water/ Agent',
+      { id: 'fham', name: 'Fham water', img: 'https://i.postimg.cc/wjqVSMCp/fham.jpg', brandDisplay: 'Fham Water',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
       },
-      { id: 'care', name: 'Care water', img: 'https://i.postimg.cc/15NtYv7K/care.webp', brandDisplay: 'Care Water/ Agent',
+      { id: 'care', name: 'Care water', img: 'https://i.postimg.cc/15NtYv7K/care.webp', brandDisplay: 'Care Water',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
       },
-      { id: 'wow', name: 'Wow water', img: 'https://i.postimg.cc/Gh1fD2DQ/wow.webp', brandDisplay: 'Wow Water/Agent',
+      { id: 'wow', name: 'Wow water', img: 'https://i.postimg.cc/Gh1fD2DQ/wow.webp', brandDisplay: 'Wow Water',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
       },
-      { id: 'konjo', name: 'Konjo water', img: 'https://i.postimg.cc/gkYDd68Y/konjo.jpg', brandDisplay: 'Konjo Water Agent',
+      { id: 'konjo', name: 'Konjo water', img: 'https://i.postimg.cc/gkYDd68Y/konjo.jpg', brandDisplay: 'Konjo Water',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
       },
-      { id: 'eden', name: 'Eden water', img: 'https://i.postimg.cc/xCnkHL01/eden.webp', brandDisplay: 'Eden Water/Agent',
+      { id: 'eden', name: 'Eden water', img: 'https://i.postimg.cc/xCnkHL01/eden.webp', brandDisplay: 'Eden Water',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
       }
@@ -398,6 +395,8 @@
     brands.forEach(brand => {
       const tile = document.createElement('div');
       tile.className = 'category-tile';
+      tile.setAttribute('data-brand-id', brand.id);
+      tile.setAttribute('data-min-price', Math.min(...brand.variants.map(v => v.price)));
       tile.innerHTML = `
         <img src="${brand.img}" alt="${brand.name}" loading="lazy">
         <span>${brand.name}</span>
@@ -441,7 +440,7 @@
       document.body.appendChild(section);
     });
 
-    // Cart logic + Cloud persistence
+    // Cart logic
     let cart = [];
 
     function loadCart() {
@@ -576,7 +575,7 @@
       tg.HapticFeedback.impactOccurred('light');
     });
 
-    // Event delegation – updated to order-btn
+    // Event delegation
     document.addEventListener('click', e => {
       const t = e.target;
 
@@ -592,25 +591,57 @@
       }
     });
 
-    // Search (debounced)
+    // ────────────────────────────────────────────────
+    // Improved search + sort by price low → high
+    // ────────────────────────────────────────────────
     let searchTimeout;
     document.getElementById('searchInput').addEventListener('input', e => {
       clearTimeout(searchTimeout);
       searchTimeout = setTimeout(() => {
-        const q = e.target.value.toLowerCase().trim();
-        const tiles = document.querySelectorAll('.category-tile');
-        let visible = 0;
+        const query = e.target.value.trim().toLowerCase();
+        const tiles = Array.from(document.querySelectorAll('.category-tile'));
+        let visibleCount = 0;
 
+        // Detect price filter
+        const priceFilter = parseInt(query.replace(/\D/g, ''), 10);
+        const isPriceFilter = !isNaN(priceFilter) && priceFilter > 0;
+
+        // Filter
         tiles.forEach(tile => {
-          const name = tile.querySelector('span').textContent.toLowerCase();
-          const show = name.includes(q) || ['140','150','160'].some(p => q.includes(p));
-          tile.style.display = show ? '' : 'none';
-          if (show) visible++;
+          const brandName = tile.querySelector('span').textContent.toLowerCase();
+          const minPrice = parseInt(tile.getAttribute('data-min-price') || '9999', 10);
+
+          let matches = false;
+
+          if (query === '') {
+            matches = true;
+          } else if (isPriceFilter) {
+            matches = minPrice <= priceFilter;
+          } else {
+            matches = brandName.includes(query);
+          }
+
+          tile.style.display = matches ? '' : 'none';
+          if (matches) visibleCount++;
         });
 
+        // Sort low → high only when price filter is active
+        if (isPriceFilter && visibleCount > 1) {
+          const container = document.getElementById('categories');
+          const visibleTiles = tiles.filter(t => t.style.display !== 'none');
+
+          visibleTiles.sort((a, b) => {
+            const pA = parseInt(a.getAttribute('data-min-price') || '9999', 10);
+            const pB = parseInt(b.getAttribute('data-min-price') || '9999', 10);
+            return pA - pB;
+          });
+
+          visibleTiles.forEach(tile => container.appendChild(tile));
+        }
+
         document.getElementById('no-results').style.display =
-          (q && visible === 0) ? 'block' : 'none';
-      }, 280);
+          (query && visibleCount === 0) ? 'block' : 'none';
+      }, 300);
     });
 
     // Init
