--- a/index.html
+++ b/index.html
@@ -282,13 +282,13 @@
   </header>
 
   <div class="search-bar">
-    <input id="searchInput" type="text" placeholder="Search brand or max price (140, 150, 160)" />
+    <input id="searchInput" type="text" placeholder="Search Water brands " />
   </div>
 
   <!-- New: Sort/Filter menu -->
   <div class="filter-bar">
     <select id="sortFilter">
-      <option value="default">Default order</option>
+      <option value="default">Filter by</option>
       <option value="price-low-high">Price: Low to High</option>
     </select>
   </div>
