--- a/index.html
+++ b/index.html
@@ -303,8 +303,8 @@
     </div>
     <div class="filter-wrapper">
       <select id="sortFilter">
-        <option value="default">Default</option>
-        <option value="price-low-high">Price: Low → High</option>
+        <option value="default">Filter by</option>
+        <option value="price-low-high">Price:Low </option>
       </select>
     </div>
   </div>
