--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
   <!-- Combined search + filter row -->
   <div class="top-controls">
     <div class="search-bar">
-      <input id="searchInput" type="text" placeholder="Search brand or max price (140, 150, 160)" />
+      <input id="searchInput" type="text" placeholder="Search brands" />
     </div>
     <div class="filter-wrapper">
       <select id="sortFilter">
